# diplom

./: .gitignore  README.md  pyproject.toml  requirements.txt  ВКР_Поддуба.docx
configs/: config.example.yaml
data/: README.md  report_registry_template.csv  report_sources_ru_bluechips.csv  universe.csv
data/processed/: monthly_model_ready.csv  report_coverage_real.csv  report_coverage_real.json
data/raw/: daily_prices.csv  daily_prices_download_audit.csv  financial_report_features_combined.csv  financial_report_features_combined_with_manual.csv  financial_report_features_sber_manual.csv  macro.csv  market.csv  (+28 more)
docs/: ALADDIN_CONCEPT_INTEGRATION.md  DEFENSE_PLAYBOOK.md  FINANCIAL_REPORT_LAYER.md  PIPELINE_BOTTLENECKS_AND_IMPROVEMENTS.md  REPORT_DOWNLOAD_CRITERIA.txt  REPORT_DOWNLOAD_LINKS.txt  toc_pages.json  ВКР_Поддуба_Илья_Сергеевич_новая_редакция.docx
risk_pipeline/: __init__.py  cli.py  config.py  data_sources.py  diagnostics.py  ensemble.py  evaluation.py  feature_engineering.py  features.py  financial_reports.py  models.py  pipeline.py  predict.py  preprocessing.py  real_data_pipeline.py  report_ablation.py  reporting.py  schemas.py  splits.py  synthetic.py  targets.py
scripts/: build_thesis_docx.py  build_vkr_docx.py  download_market_data.py  download_reports_auto.py  download_reports_crawl4ai.py  make_defense_materials.py  run_demo.py
tests/: test_diagnostics.py  test_ensemble.py  test_feature_engineering.py  test_features.py  test_financial_reports.py  test_neural_models.py  test_pipeline_smoke.py  test_policy.py  test_splits.py  test_targets.py
(+108 files in other folders)
