[project]
name = "risk-pipeline"
version = "0.2.0"
description = "Point-in-time ML pipeline for classification of investment risk of Russian equities"
requires-python = ">=3.10"
authors = [{name = "VKR project"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "requests>=2.31",
  "lxml>=5.0",
  "matplotlib>=3.8",
  "pypdf>=4.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
neural = ["torch>=2.1"]
dev = ["pytest>=8.0"]
crawler = ["crawl4ai>=0.8.6"]

[project.scripts]
risk-pipeline = "risk_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["risk_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
